checker/temp/334/error.log
source.cpp:6:1: error: 'ifstream' does not name a type
    6 | ifstream in("input.txt");
      | ^~~~~~~~
source.cpp:7:1: error: 'ofstream' does not name a type
    7 | ofstream out("output.txt");
      | ^~~~~~~~
source.cpp: In function 'int main()':
source.cpp:10:5: error: 'in' was not declared in this scope; did you mean 'int'?
   10 |     in >> a >> b;
      |     ^~
      |     int
source.cpp:11:5: error: 'out' was not declared in this scope
   11 |     out << a+b;
      |     ^~~
